set up correct spacing for dashboard components

--- a/src/scss/dashboard/dashboard.scss
+++ b/src/scss/dashboard/dashboard.scss
@@ -1,3 +1,11 @@
 .mainDashboard {
     display: flex;
+    flex-flow: row nowrap;
+    height: 100vh;
+    margin-top: 50px;
+    &-content {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
 }
+    
