--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 300px auto;
+    margin: 150px auto;
     width: 500px;
     padding: 20px;
     color: white;
