--- a/src/scss/register.scss
+++ b/src/scss/register.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 300px auto;
+    margin: 150px auto;
     width: 500px;
     padding: 20px;
     color: white;
